// ***********************
//  Euskalbar - CHANGELOG
// ***********************

3.1 bertsioa
================
- Elebila euskarazko bilatzailea gehitu zaio barrari. (#56)
- CorpEusen eta ZT Corpusean azentu markak, eñeak eta dieresiak ematen dituzten arazoak konpondu dira. (#55)
- Ereduzko prosa gaur proiektuko corpusa gehitu zaio barrari. (#54)


3.0 bertsioa
================
- Bergara aldeko hiztegia kontsultagai dago. (#37) (#53)
- CorpEus gehitu zaio barrari. (#42) (#46)
- Kontsulta konbinatuetan azpisarreren kontsulta gaitzeko edo ezgaitzeko hobespena sortu da. (#41)
- Kontsulta konbinatuetan Elhuyarren eta 3000ren azpisarrerak ere kontsultatzen dira. (#26)
- Elhuyar hiztegia tarteko orrialderik erabili gabe kontsulta daiteke. (#36)
- POST metodoa darabilten hiztegien atzipena hobetu da. (#32)
- Kontsulta konbinatuetan hiztegi gehiago kontsulta daitezke. (#25)
- Kontsulta konbinatuetan hiztegien jatorrizko webguneetara joateko esteka erantsi da. (#35)
- Ongi etorri leihoa sortu da. (#29)
- Intza proiektuko lokuzioak kontsultatzeko botoia gehitu zaio barrari.
- Sinonimoen hiztegiak gehitu zaizkio barrari.
- Barrako zenbait hiztegi erakutsi eta ezkutatzeko aukera sortu da. (#6)
- Azalak sortu dira. (#14)
- Estatistika lokalak sortu dira. (#4)
- Estatistika lokalak ezabatzeko botoi bat gehitu zaio estatistiken leihoari (#23)
- 3000ren azpisarrerak kontsultatzean zegoen arazoa konpondu da. (#18)
- Elhuyarren azpisarrerak kontsultatzean azentu markekin zegoen arazoa konpondu da. (#13)
- Open-Tran hiztegiak fitxak berrerabiltzeko zuen arazoa konpodu da. (#12)
- Hizkuntza hautatzeko botoiaren itxura aldatu da.
- Aukera berria: Shift eta Ktrl kontsultetarako denbora-muga aldatu egin daiteke.
- Morris kontsultaren letra-tipoa aldatu egin da, gainerako kontsulten letra-tipo bera eduki dezan.
- Hiztegien menuko hiztegiek fitxen hobespenak errespetatzen dituzte zabaltzean. (#16)
- Aldaketak hiztegien menuan:
  + Eibarko euskeria gehitu da.