@@ -1,4 +1,5 @@
 <!-- Common -->
+<!ENTITY euskalbar.browse "Browse...">
 <!ENTITY euskalbar.key "E">
 <!ENTITY euskalbar.label "Euskalbar">
 <!ENTITY euskalbar.name "Euskalbar">
@@ -34,7 +35,7 @@
 <!ENTITY euskalbar.about.whatsnew2 "Elebila, the Basque web search engine has been added. (#56)">
 <!ENTITY euskalbar.about.whatsnew3 "The problems CorpEus and ZT Corpusa had with accents and others have been fixed. (#55)">
 <!ENTITY euskalbar.about.whatsnew4 "The Ereduzko prosa gaur corpus has been added. (#54)">
-<!ENTITY euskalbar.about.whatsnew5 "-">
+<!ENTITY euskalbar.about.whatsnew5 "Customized skins">
 <!ENTITY euskalbar.about.whatsnew6 "-">
 <!ENTITY euskalbar.about.whatsnew7 "The complete changelog can be seen here (in Basque):">
 
@@ -58,6 +59,7 @@
 <!ENTITY euskalbar.prefs.subqueries.caption "Perform subqueries">
 <!ENTITY euskalbar.prefs.skin.caption "Skins">
 <!ENTITY euskalbar.prefs.skin.label "Choose a skin for Euskalbar:">
+<!ENTITY euskalbar.prefs.skin.custom "Use a custom skin">
 
 
 <!-- Euskalterm -->
