@@ -1,4 +1,6 @@
 hizk=english
+izenbcss=Select skin
+hedapcss=CSS File
 m0Euskalterm=Loading Euskalterm...
 m0Elhuyar=Loading Elhuyar...
 m03000=Loading 3000 dictionary...
