@@ -1,4 +1,6 @@
 hizk=español
+izenbcss=Selección de skin
+hedapcss=Fichero CSS
 m0Euskalterm=Cargando Euskalterm...
 m0Elhuyar=Cargando Elhuyar...
 m03000=Cargando el diccionario 3000...
@@ -14,4 +16,3 @@ m1Mokoroa=No se ha podido cargar Mokoroa.
 m1Intza=No se ha podido cargar Intza.
 m1hiztegiak=Mostrar el menú de diccionarios
 m2hiztegiak=Esconder el menú de diccionarios
-
