@@ -1,4 +1,6 @@
 hizk=euskara
+izenbcss=Hautatu azala
+hedapcss=CSS fitxategia
 m0Euskalterm=Euskalterm kargatzen...
 m0Elhuyar=Elhuyar kargatzen...
 m03000=3000 hiztegia kargatzen...
@@ -14,4 +16,3 @@ m1Mokoroa=Ezin izan da Mokoroa kargatu.
 m1Intza=Ezin izan da Intza kargatu.
 m1hiztegiak=Erakutsi hiztegien menua
 m2hiztegiak=Ezkutatu hiztegien menua
-
