@@ -4,6 +4,7 @@
 
 3.1 bertsioa
 ================
+- Azal pertsonalizatuak erabiltzeko aukera gehitu da. (#57)
 - Elebila euskarazko bilatzailea gehitu zaio barrari. (#56)
 - CorpEusen eta ZT Corpusean azentu markak, eñeak eta dieresiak ematen dituzten arazoak konpondu dira. (#55)
 - Ereduzko prosa gaur proiektuko corpusa gehitu zaio barrari. (#54)
